<resources>
    <string name="app_name">Happy</string>
    <string name="exit_message">再按一次退出</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="about_app">about app</string>
    <string name="about_app_text">\n
        1.使用 100% kotlin 语言开发\n
        2.遵循 Material Design 风格\n
        3.兼容 4.X-7.0 及各种分辨率\n
        4.采用易源接口数据
    </string>
    <string name="source_code">source code</string>
    <string name="source_code_address">\n
        me:https://github.com/yhaolpz/Smil.git \n
        author:https://github.com/yhaolpz/Smil.git
        </string>
    <string name="introduce">introduce</string>
    <string name="introduce_link">
        http://blog.csdn.net.yhaolpz/article/details/77922521
    </string>
    <string name="about_library">about_library</string>
    <string name="about_library_introduce">\n
        1.org.jetbrains.kotlin:kotlin-stdlib-jre7:1.1.2-4\n
        2.org.jetbrains.anko:anko-commons:0.10.1\n
        3.org.jetbrains.anko:anko-coroutines:0.10.1\n
        4.com.google.code.gson:gson:2.8.0\n
        5.com.github.bumptech.glide:glide:4.0.0\n
        6.pl.droidsonroids.gif:android-gif-drawable:1.2.8\n
        7.com.squareup.okhttp3:okhttp:3.8.1\n
        8.com.squareup.okio:okio:1.13.0\n
        9.com.github.lzyzsd:circleprogress:1.2.1
    </string>
    <string name="transitionName_pic">transitionName_pic</string>
    <string name="version">©2018.1 - 2018.1  Developed by xiong  v1.0</string>
</resources>
