<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="jianxiongrao.smileimitation.module.AboutAppActivity">
<android.support.design.widget.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="256dp"
    app:theme="@style/AppTheme.AppBarOverlay"
    >

    <android.support.design.widget.CollapsingToolbarLayout
        app:collapsedTitleGravity="left"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:contentScrim="@color/colorPrimary"
        app:expandedTitleMarginStart="6dp"
        app:title="Happy"
        app:expandedTitleTextAppearance="@android:color/white"
        app:collapsedTitleTextAppearance="@android:color/white"
        app:layout_scrollFlags="scroll|enterAlways"
        >
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            app:cardCornerRadius="35dp"
            app:cardElevation="5dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/img07" />
        </android.support.v7.widget.CardView>
            <TextView
                android:textSize="18sp"
                android:id="@+id/mVersion"
                android:textColor="@android:color/white"
                android:layout_marginTop="5dp"
                android:text="V 1.0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <android.support.v7.widget.Toolbar
            android:id="@+id/about_toolbar"
            app:layout_collapseMode="pin"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/titlebar_back">

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.CollapsingToolbarLayout>
</android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_margin="15dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@android:color/black"
                    android:text="@string/about_app"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
                <TextView
                    android:paddingLeft="20dp"
                    android:textSize="14sp"
                    android:textColor="#c7212121"
                    android:layout_marginTop="25dp"
                    android:text="@string/about_app_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="20dp"/>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                app:cardCornerRadius="5dp"
                app:cardElevation="2dp"
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="@string/source_code"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginTop="20dp"
                    android:textColor="#c7212121"
                    android:paddingLeft="20dp"
                    android:text="@string/source_code_address"
                    android:textSize="16sp"
                    android:autoLink="web"
                    android:textColorLink="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="20dp"/>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                app:cardCornerRadius="5dp"
                app:cardElevation="2dp"
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="@string/introduce"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginTop="35dp"
                    android:textColor="#c7212121"
                    android:paddingLeft="20dp"
                    android:text="@string/introduce_link"
                    android:textSize="16sp"
                    android:autoLink="web"
                    android:textColorLink="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="20dp"/>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                app:cardCornerRadius="5dp"
                app:cardElevation="2dp"
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="@string/about_library"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginTop="20dp"
                    android:textColor="#c7212121"
                    android:paddingLeft="20dp"
                    android:text="@string/about_library_introduce"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="20dp"/>
            </android.support.v7.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="200dp" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
